--- a/EatTogether/CustomAdvertisementTableViewCell.xib
+++ b/EatTogether/CustomAdvertisementTableViewCell.xib
@@ -14,27 +14,38 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ceu-Jk-4KJ">
-                        <rect key="frame" x="0.0" y="123" width="320" height="47"/>
+                        <rect key="frame" x="0.0" y="123" width="320" height="46.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5w-f8-DSu">
+                                <rect key="frame" x="102" y="13" width="160" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="X1g-79-gql"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdD-cl-hjt">
+                                <rect key="frame" x="30" y="13" width="42" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="0.68893124439999998" green="0.68893124439999998" blue="0.68893124439999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="KdD-cl-hjt" firstAttribute="leading" secondItem="Ceu-Jk-4KJ" secondAttribute="leading" constant="30" id="53z-KD-ZJm"/>
+                            <constraint firstAttribute="centerY" secondItem="KdD-cl-hjt" secondAttribute="centerY" id="IQ5-Tf-VrS"/>
+                            <constraint firstItem="z5w-f8-DSu" firstAttribute="leading" secondItem="KdD-cl-hjt" secondAttribute="trailing" constant="30" id="LEZ-UJ-fn5"/>
+                            <constraint firstAttribute="centerY" secondItem="z5w-f8-DSu" secondAttribute="centerY" id="bXX-rp-vb4"/>
+                        </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vaj-gU-7hv">
-                        <rect key="frame" x="0.0" y="0.5" width="320" height="122.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="122.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="122.5" id="hb0-uA-pN8"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5w-f8-DSu">
-                        <rect key="frame" x="96" y="129.5" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdD-cl-hjt">
-                        <rect key="frame" x="14" y="129.5" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pgp-cB-IN8">
                         <rect key="frame" x="240" y="80" width="80" height="80"/>
                         <constraints>
@@ -58,18 +69,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="Ceu-Jk-4KJ" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" id="1XS-wz-JN3"/>
-                    <constraint firstItem="z5w-f8-DSu" firstAttribute="leading" secondItem="KdD-cl-hjt" secondAttribute="trailing" constant="40" id="5fa-xT-Yo4"/>
-                    <constraint firstItem="KdD-cl-hjt" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" constant="6.5" id="84I-ce-Wd3"/>
                     <constraint firstAttribute="trailing" secondItem="Ceu-Jk-4KJ" secondAttribute="trailing" id="Bk8-6q-rxT"/>
                     <constraint firstItem="Ceu-Jk-4KJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="LCF-Xr-VvX"/>
                     <constraint firstAttribute="bottom" secondItem="Ceu-Jk-4KJ" secondAttribute="bottom" id="MNZ-W8-MWJ"/>
                     <constraint firstAttribute="bottom" secondItem="pgp-cB-IN8" secondAttribute="bottom" constant="10" id="NVz-5B-uGe"/>
-                    <constraint firstAttribute="bottom" secondItem="KdD-cl-hjt" secondAttribute="bottom" constant="20" id="PBa-wk-grp"/>
                     <constraint firstAttribute="trailing" secondItem="vaj-gU-7hv" secondAttribute="trailing" id="d3y-xj-FLE"/>
                     <constraint firstItem="vaj-gU-7hv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="did-bd-UEN"/>
-                    <constraint firstItem="KdD-cl-hjt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="iaA-YS-PBN"/>
                     <constraint firstAttribute="trailing" secondItem="3So-NY-kRg" secondAttribute="trailing" constant="13" id="jvP-eW-e5C"/>
-                    <constraint firstItem="z5w-f8-DSu" firstAttribute="top" secondItem="vaj-gU-7hv" secondAttribute="bottom" constant="6.5" id="mVB-jN-iWM"/>
                     <constraint firstItem="vaj-gU-7hv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nPW-lC-Lf5"/>
                     <constraint firstItem="3So-NY-kRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="tYM-aP-ybq"/>
                     <constraint firstAttribute="trailing" secondItem="pgp-cB-IN8" secondAttribute="trailing" id="uKD-P8-jAz"/>
